# viam-apds9960-sensor

./: .gitignore  .viam-gen-info  README.md  meta.json  pyproject.toml  requirements.txt  run.sh  setup.sh
src/: main.py
src/viam_apds9960_sensor/: __main__.py
