[project]
name = "viam-apds9960-sensor"
version = "0.1.0"
description = "A sensor component module for Viam to support the APDS9960 proximity, gesture, and color detector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-apds9960>=3.1.11",
    "pydantic>=2.9.2",
    "viam-sdk>=0.30.0",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
